# logger_high

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json  开发过程记录：.txt
audit/: CMakeLists.txt  shard_reader.cpp  shard_reader.h
compress/: CMakeLists.txt  compressor.h  zlib_compressor.cpp  zlib_compressor.h
context/: CMakeLists.txt  context.cpp  context.h  strand.cpp  strand.h  thread_pool.cpp  thread_pool.h
crypt/: CMakeLists.txt  aes_gcm_cipher.cpp  aes_gcm_cipher.h  cipher.h  kdf.cpp  kdf.h  server_key_loader.cpp  server_key_loader.h  x25519_agreement.cpp  x25519_agreement.h
demo_logs/run-20260522-222942-434/: buffer-000000.mmap  buffer-000001.mmap  server.priv  server.pub
demo_logs/run-20260522-223625-795/: server.priv  server.pub
examples/: CMakeLists.txt  compress_smoke.cpp  context_smoke.cpp  crypt_smoke.cpp  effective_sink_smoke.cpp  encrypted_logging_demo.cpp  hello.cpp  log_decoder.cpp  mmap_smoke.cpp  proto_smoke.cpp
formatter/: CMakeLists.txt  default_formatter.cpp  default_formatter.h  effective_formatter.cpp  effective_formatter.h  formatter.h
handle/: CMakeLists.txt  log_handle.cpp  log_handle.h  log_macros.h  log_msg.h
mmap/: CMakeLists.txt  mmap_buffer.cpp  mmap_buffer.h  mmap_region.cpp  mmap_region.h  mmap_store.cpp  mmap_store.h
proto/: CMakeLists.txt  log_record.proto
sinks/: CMakeLists.txt  console_sink.cpp  console_sink.h  effective_sink.cpp  effective_sink.h  effective_sink_config.h  eviction_runner.cpp  eviction_runner.h  log_sink.h  shard_writer.cpp  shard_writer.h
utils/: CMakeLists.txt  internal_log.cpp  internal_log.h  log_level.h  source_location.h  system_info.cpp  system_info.h
